[gd_scene load_steps=4 format=3 uid="uid://dcaxkcpwqpkyd"]

[ext_resource type="Script" path="res://Scripts/exit.gd" id="1_e20da"]
[ext_resource type="AudioStream" uid="uid://dj4f4s7t1wy6n" path="res://Assets/Tutorial Dogg/Sound/12_credits.mp3" id="2_p11gm"]
[ext_resource type="PackedScene" uid="uid://be410ygscs100" path="res://Scene/tutorial_dogg.tscn" id="2_xpcae"]

[node name="Credits" type="Node2D"]

[node name="Credits" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e20da")

[node name="New Game" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 160.0
offset_bottom = 95.0
action_mode = 0
text = "New Game"
icon_alignment = 1

[node name="New Game2" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 208.0
offset_top = 40.0
offset_right = 304.0
offset_bottom = 88.0
action_mode = 0
text = "New Game"
icon_alignment = 1

[node name="New Game3" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 144.0
offset_top = 128.0
offset_right = 240.0
offset_bottom = 160.0
action_mode = 0
text = "New Game"
icon_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 176.0
bbcode_enabled = true
text = "[center]Made by: Linda Samu Mia Pascal
Niklas"

[node name="aC" type="AudioStreamPlayer" parent="Credits"]
stream = ExtResource("2_p11gm")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(3.375, 3.375)

[node name="TutorialDogg" parent="." instance=ExtResource("2_xpcae")]
position = Vector2(166, 115)

[connection signal="ready" from="Credits" to="TutorialDogg" method="_on_credits_ready"]
[connection signal="pressed" from="Credits/New Game" to="Credits" method="_on_new_game_pressed"]
[connection signal="pressed" from="Credits/New Game2" to="Credits" method="_on_new_game_pressed"]
[connection signal="pressed" from="Credits/New Game3" to="Credits" method="_on_new_game_pressed"]
[connection signal="credits_00" from="TutorialDogg" to="Credits" method="_on_tutorial_dogg_credits_00"]
